--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,21 +14,63 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QLabel" name="image">
+   <widget class="QPushButton" name="go_button">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>210</y>
-      <width>951</width>
-      <height>191</height>
+      <x>500</x>
+      <y>290</y>
+      <width>88</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
-     <string/>
+     <string>Go</string>
     </property>
-    <property name="scaledContents">
-     <bool>false</bool>
+   </widget>
+   <widget class="QScrollArea" name="scrollArea">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>70</y>
+      <width>421</width>
+      <height>321</height>
+     </rect>
     </property>
+    <property name="widgetResizable">
+     <bool>true</bool>
+    </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>417</width>
+       <height>317</height>
+      </rect>
+     </property>
+     <widget class="QLabel" name="image">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>5000</width>
+        <height>321</height>
+       </rect>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>5000</width>
+        <height>321</height>
+       </size>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="scaledContents">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </widget>
    </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
@@ -59,10 +101,10 @@
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>461</x>
-      <y>21</y>
-      <width>181</width>
-      <height>161</height>
+      <x>460</x>
+      <y>22</y>
+      <width>178</width>
+      <height>248</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -116,9 +158,40 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="remove_button">
+      <widget class="QRadioButton" name="original_image">
        <property name="text">
-        <string>Remove Staves</string>
+        <string>Original I&amp;mage</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="binarized_image">
+       <property name="text">
+        <string>Binari&amp;zed Image</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="removed_staves">
+       <property name="text">
+        <string>Remo&amp;ved Staves</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="connected_components">
+       <property name="text">
+        <string>Connected Components</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="update_image">
+       <property name="text">
+        <string>Update Image</string>
        </property>
       </widget>
      </item>
